# ScatterPrism

./: .gitignore  ARTIFACTS.md  CITATION.cff  CLAUDE.md  README.md  main.py  pyproject.toml  requirements-jinst.txt  slurm_submit.py
configs/: configs.py  default.yaml
configs/dataset/: bimodal_asym.yaml  delta_0.yaml  exponential_decay.yaml  gauss_cutoff.yaml  gauss_narrow.yaml  gauss_standard.yaml  narrow_wide_overlap.yaml  noise_10spikes.yaml  noise_3spikes.yaml  paired_mcpom.yaml  single_mcpom.yaml  tall_flat_far.yaml  triple_flat_spread.yaml  triple_mixed.yaml  twin_narrow.yaml  uniform_flat.yaml
configs/detector/: mcpom_hard.yaml  mcpom_mid.yaml  mcpom_sigma_0.5.yaml  mcpom_sigma_1.0.yaml  mcpom_sigma_2.0.yaml
configs/experiment/: delta.yaml  mcpom_denoise.yaml  mcpom_gen.yaml  mcpom_gen_all_channels.yaml  mock_gen.yaml
configs/transform/: default_mock.yaml  default_pom.yaml  full_pom.yaml
scatterprism/: __init__.py  constraint.py  datasets.py  detectors.py  kinematic.py  metric.py  models.py  networks.py  schemas.py  transforms.py  utils.py
scripts/: 10_benchmark_timing.py  1_flow_trajectory.py  2_0recompute_val_nfe.py  2_1loss_vs_physics_metrics.py  3_t_channel_closeup.py  4_distributions_diff.py  5_denoise_comparison.py  6_failure_modes.py  7_checkpoint_evolution.py  8_correlation_matrix.py  9_eval_best_checkpoint.py
